--- a/css of the index.css
+++ b/css of the index.css
@@ -21,6 +21,9 @@ body {
 .baise {
   background-color: rgba(255, 255, 255, 0.8);
 }
+p{
+  color: rgb(60, 60, 60);
+}
 .row {
   flex-direction: row;
 }
